name:                nregions
version:             0.1.0.0
synopsis:            Monadic regional resource management with support for threads.
description:         Monadic regional resource management with support for threads.
homepage:            https://github.com/YellPika/nregions
license:             BSD3
license-file:        LICENSE
author:              YellPika
maintainer:          yellpika@gmail.com
copyright:           Copyright © Anthony Vandikas, 2013
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Region,
                       Data.Region.IORefCount
  other-modules:       Control.Monad.Generator
  build-depends:       base >=4.6 && <4.7, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  